<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SystemMasterActivity"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/control_box_background"
                    android:layout_margin="5dp">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_button_text"
                        android:id="@+id/masterRegisterButton"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/serverAddrEditText"
                        android:layout_above="@+id/masterRegisterButton"
                        android:layout_centerHorizontal="true"
                        android:text="192.168.0.1"
                        android:inputType="phone"
                        android:digits="0123456789."
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"/>

            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/control_box_background"
                    android:layout_margin="5dp">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_ordering_label"
                        android:id="@+id/initOrderingButton"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:enabled="false"
                    android:singleLine="false" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/devicesOrderedLabel"
                        android:layout_below="@+id/initOrderingButton"
                        android:layout_centerHorizontal="true" />
            </RelativeLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/control_box_background"
                    android:layout_margin="5dp">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/freeze_time_button_text"
                        android:id="@+id/freezeTimeButton"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:enabled="false"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/devicesReadyLabel"
                        android:layout_below="@+id/freezeTimeButton"
                        android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/control_box_background"
                    android:layout_margin="5dp">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_system_button_text"
                        android:id="@+id/resetSystemButton"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:enabled="false"
                    android:singleLine="false" />
            </RelativeLayout>
    </LinearLayout>
</LinearLayout>
